sdm660-common: overlay: Disable SystemUI anti-falsing on lockscreen
 * The anti-falsing implementation from HumanInteractionClassifier
    regularly prevents easy swipe to unlock or to pattern / pin
    on the keyguard lockscreen, requiring multiple attempts
    until accepted due to a hardcoded evaluation (5.0f)
    while normal usage shows better results without it

 * Another solved situation is remote device access like
    Vysor or TeamViewer were the device is almost impossible
    to swipe properly from a computer client

Change-Id: I0c2590f56e2cf6d6cd4ff3af2341a985670168e3
Signed-off-by: Adrian DC <radian.dc@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -52,4 +52,10 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
          should be shown in a notification. If we cannot show at least this many replies we instead
          show none. -->
     <integer name="config_smart_replies_in_notifications_min_num_system_generated_replies">1</integer>
+
+    <!-- If true, enable the advance anti-falsing classifier on the lockscreen. On some devices it
+         does not work well, particularly with noisy touchscreens. Note that disabling it may
+         increase the rate of unintentional unlocks. -->
+    <bool name="config_lockscreenAntiFalsingClassifierEnabled">false</bool>
+
 </resources>
