--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -299,7 +299,7 @@
           Wifi interfaces.  If the device doesn't want to support tethering over Wifi this
           should be empty.  An example would be "softap.*" -->
    <string-array translatable="false" name="config_tether_wifi_regexs">
-       <item>"wlan\\d"</item>
+        <item>"wlan\\d"</item>
    </string-array>
 
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
@@ -307,5 +307,11 @@
 
     <!-- Whether device supports double tap to wake -->
     <bool name="config_supportDoubleTapWake">true</bool>
+
+    <!-- The list of components which should be automatically disabled for a specific device. -->
+    <string-array name="config_deviceDisabledComponents" translatable="false">
+        <item>com.google.android.gms/com.google.android.gms.nearby.messages.service.NearbyMessagesService</item>
+        <item>com.google.android.gms/com.google.android.gms.nearby.discovery.service.DiscoveryService</item>
+    </string-array>
 
 </resources>
