sdm660-common: Disable proximity check before pulsing
* Fixes ambient display

Signed-off-by: Tiktodz <ewprjkt@proton.me>
Change-Id: Ia3b3fd3a1acb7b4fdf0e59449d57235a6abf0deb

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -47,4 +47,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
     <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
     <integer name="config_screenRecorderMaxFramerate">60</integer>
+
+    <!-- Doze: check proximity sensor before pulsing? -->
+    <bool name="doze_proximity_check_before_pulse">false</bool>
+
 </resources>
